--- a/layout/starter-kit/src/scss/00_vendors/_all.scss
+++ b/layout/starter-kit/src/scss/00_vendors/_all.scss
@@ -2,4 +2,4 @@
  * Vendors
  * All external librarie needed in the project.
  */
-import 'node_modules/@coffeekraken/gridle/index';
+@import "../../../node_modules/@coffeekraken/gridle/index";
