--- a/utils/sugar1/src/scss/core/functions/_all.scss
+++ b/utils/sugar1/src/scss/core/functions/_all.scss
@@ -1,22 +1,26 @@
+@forward "check-property";
 @forward "color-modifier";
 @forward "component";
+@forward "context";
 @forward "convert";
 @forward "dash-to-map";
 @forward "em";
 @forward "even";
 @forward "filter-map";
-// @forward "filter";
-// @forward "font-family";
-// @forward "font";
+@forward "filter";
+@forward "font-family";
+@forward "font";
+@forward "get-property-name";
+@forward "get-property-type";
 // @forward "hacolor";
 // @forward "interpolate";
 // @forward "color";
-// @forward "is";
-// @forward "lnf";
-// @forward "look-and-feel";
-// @forward "modular-scale";
-// @forward "odd";
-// @forward "parse-properties";
+@forward "is";
+@forward "lnf";
+@forward "look-and-feel";
+@forward "modular-scale";
+@forward "odd";
+@forward "parse-properties";
 // @forward "percent";
 // @forward "pt";
 // @forward "px";
