--- a/utils/sugar1/src/scss/core/functions/_component.scss
+++ b/utils/sugar1/src/scss/core/functions/_component.scss
@@ -1,3 +1,5 @@
+@use '../variables' as sugar;
+
 /**
  * Return the name of the top level component setted with the [../mixins/_component.scss] mixin
  *
@@ -16,9 +18,9 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com);
  */
 @function component($default: null) {
-  @if not $_sugar-component-name {
+  @if not sugar.$component-name {
     @return $default;
   } @else {
-    @return $_sugar-component-name;
+    @return sugar.$component-name;
   }
 }
