--- a/utils/sugar1/src/scss/core/functions/_context.scss
+++ b/utils/sugar1/src/scss/core/functions/_context.scss
@@ -1,3 +1,5 @@
+@use '../variables' as sugar;
+
 /**
  * Return the name of the context setted with the [../mixins/_context.scss] mixin
  *
@@ -18,9 +20,9 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com);
  */
 @function context($default: null) {
-  @if not $_sugar-current-context {
+  @if not sugar.$current-context {
     @return $default;
   } @else {
-    @return $_sugar-current-context;
+    @return sugar.$current-context;
   }
 }
