--- a/utils/sugar1/src/scss/core/functions/_filter-map.scss
+++ b/utils/sugar1/src/scss/core/functions/_filter-map.scss
@@ -2,6 +2,13 @@
 @use "sass:map";
 @use "sass:meta";
 @use "sass:string";
+@use 'setting' as *;
+@use 'replace-tokens' as *;
+@use '../../string/str-split' as *;
+@use '../../map/map-set' as *;
+
+
+
 /**
  * Take a filter as parameter and parse it to return the {Map} corresponding
  * The $filter parameter can be either a registered filter name or a filter formated like `filterName(filterValue)`
@@ -34,20 +41,20 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 @function filter-map($filter) {
-  $filters: map.keys(sugar.setting("filters"));
+  $filters: map.keys(setting("filters"));
   $map: ();
   @each $f in $filter {
     // check if the filter exist in registered ones
     @if meta.type-of($f) == string and list.index($filters, $f) {
       // we have a filter
-      $map: map.merge($map, sugar.filter-map(sugar.setting("filters.#{$f}")));
+      $map: map.merge($map, filter-map(setting("filters.#{$f}")));
     } @else {
       // split the filter
       $open_idx: string.index($f, "(");
       $f_name: string.slice($f, 1, $open_idx - 1);
       $f_value: string.slice($f, $open_idx + 1, -2);
-      $f_value: sugar.str-split($f_value, " ");
-      $map: sugar.map-set($map, $f_name, sugar.replace-tokens($f_value));
+      $f_value: str-split($f_value, " ");
+      $map: map-set($map, $f_name, replace-tokens($f_value));
     }
   }
   @return $map;
