--- a/utils/sugar1/src/scss/core/functions/_filter.scss
+++ b/utils/sugar1/src/scss/core/functions/_filter.scss
@@ -1,5 +1,7 @@
 @use "sass:list";
 @use "sass:string";
+@use 'filter-map' as *;
+
 /**
  * Return a list with all the filters that are passed as argument
  * This will use the [./_s-filter-map.scss] function to parse the filters
@@ -9,7 +11,7 @@
  *
  * @example
  * // register a filter
- * \@include s-setup((
+ * \@include sugar.setup((
  * 		filters : (
  * 			myCoolFilter : box-shadow(#000 0 0 10px) blur(30px),
  * 			// other filters...
@@ -18,20 +20,20 @@
  *
  * // registered filter
  * .my-cool-elememt {
- * 		filter : s-filter(myCoolFilter);
+ * 		filter : sugar.filter(myCoolFilter);
  * 		// filter : box-shadow(#000 0 0 10px) blur(30px);
  * }
  *
  * // custom filter
  * .my-cool-element {
- * 		filter : s-filter(myCoolFilter invert(100%));
+ * 		filter : sugar.filter(myCoolFilter invert(100%));
  * 		// filter : box-shadow(#000 0 0 10px) blur(30px) invert(100%);
  * }
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-filter($filter) {
-  $filter-map: s-filter-map($filter);
+@function filter($filter) {
+  $filter-map: filter-map($filter);
   $res: ();
   @each $name, $value in $filter-map {
     $res: list.append($res, string.unquote("#{$name}(#{$value})"));
