--- a/utils/sugar1/src/scss/core/functions/_is.scss
+++ b/utils/sugar1/src/scss/core/functions/_is.scss
@@ -1,6 +1,9 @@
 @use "sass:math";
 @use "sass:meta";
 @use "sass:string";
+@use '../../string/str-split' as *;
+@use '../../string/str-is-url' as *;
+
 /**
  * Check if the passed value is of a certain type
  *
@@ -39,24 +42,24 @@
  * @return 			{Boolean} 							true if match the type, false if not
  *
  * @example
- * s-is(hello, string) // => true
- * s-is('hello', string) // => true
- * s-is(#fff, color) // => true
- * s-is(hello #fff, list-color) // => false
- * s-is(#fff #ddd, list-color) // => true
+ * sugar.is(hello, string) // => true
+ * sugar.is('hello', string) // => true
+ * sugar.is(#fff, color) // => true
+ * sugar.is(hello #fff, list-color) // => false
+ * sugar.is(#fff #ddd, list-color) // => true
  * // etc...
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-is($value, $type) {
+@function is($value, $type) {
   @if meta.type-of($type) == string and string.index($type, "|") {
-    $type: _split($type, "|");
+    $type: str-split($type, "|");
   }
 
   @if meta.type-of($type) == list {
     $ok: false;
     @each $t in $type {
-      @if s-is($value, $t) {
+      @if is($value, $t) {
         $ok: true;
       }
     }
@@ -64,8 +67,8 @@
   } @else {
     @if $type == mixed {
       @return true;
-    } @else if $type == null or $type == "null" {
-      @return _is-null($value);
+    } @else if $type == null or $type == "null" or $type == Null or $type == 'Null' {
+      @return meta.type-of($value) == 'null';
     } @else if $type == url {
       @return str-is-url($value);
     } @else if string.index($type, "map-") {
@@ -81,7 +84,7 @@
       $idx: string.index($type, "-");
       $type: string.slice($type, $idx + 1);
       @each $item in $value {
-        @if $item and not s-is($item, $type) {
+        @if $item and not is($item, $type) {
           @return false;
         }
       }
@@ -125,29 +128,29 @@
     } @else if $type == pc {
       @return meta.type-of($value) == number and not math.is-unitless($value) and
         math.unit($value) == pc;
-    } @else if $type == s or $type == second {
+    } @else if $type == s or $type == second or $type == Second or $type == 'Second' {
       @return meta.type-of($value) == number and not math.is-unitless($value) and
         math.unit($value) == s;
-    } @else if $type == boolean or $type == bool {
-      @return _is-boolean($value);
-    } @else if $type == function {
-      @return _is-function($value);
-    } @else if $type == number {
+    } @else if $type == boolean or $type == bool or $type == Boolean or $type == 'Boolean' or $type == Bool or $type == 'Bool' {
+      @return meta.type-of($value) == 'bool';
+    } @else if $type == function or $type == 'function' or $type == Function or $type == 'Function' {
+      @return function-exists($value);
+    } @else if $type == number or $type == Number or $type == 'number' or $type == 'Number' {
       @return meta.type-of($value) == number;
-    } @else if $type == integer or $type == int {
+    } @else if $type == integer or $type == int or $type == 'Integer' or $type == 'Int' or $type == 'integer' or $type == 'int' {
       @if meta.type-of($value) != number {
         @return false;
       }
       @return math.round($value) == $value;
-    } @else if $type == string {
+    } @else if $type == string or $type == String or $type == 'string' or $type == 'String' {
       @return meta.type-of($value) == string;
-    } @else if $type == color {
+    } @else if $type == color or $type == 'color' or $type == Color or $type == 'Color' {
       @return meta.type-of($value) == color;
-    } @else if $type == list {
+    } @else if $type == list or $type == 'list' or $type == List or $type == 'List' {
       @return meta.type-of($value) == list;
-    } @else if $type == map {
+    } @else if $type == map or $type == 'map' or $type == Map or $type == 'Map' {
       @return meta.type-of($value) == map;
-    } @else if $type == degree or $type == deg {
+    } @else if $type == degree or $type == deg or $type == 'degree' or $type == 'Degree' or $type == Degree or $type == Deg {
       @return math.unit($value) == deg;
     }
   }
