--- a/utils/sugar1/src/scss/core/functions/_look-and-feel.scss
+++ b/utils/sugar1/src/scss/core/functions/_look-and-feel.scss
@@ -1,5 +1,8 @@
 @use "sass:math";
 @use "sass:meta";
+@use 'is' as *;
+@use 'setting' as *;
+
 /**
  * Return a settings.look-and-feel stack value
  *
@@ -8,19 +11,19 @@
  *
  * @example
  * .my-cool-element {
- * 		padding : s-look-and-feel(padding-horizontal) s-look-and-feel(padding-vertical);
+ * 		padding : sugar.look-and-feel(padding-horizontal) sugar.look-and-feel(padding-vertical);
  * }
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-look-and-feel($name) {
+@function look-and-feel($name) {
   // protect
-  @if not s-is($name, string) {
+  @if not is($name, string) {
     @error ("the s-look-and-feel name parameter has to be a string corresponding to a look and feel setting...");
   }
 
   // initial value
-  $value: s-setting("look-and-feel.#{$name}");
+  $value: setting("look-and-feel.#{$name}");
 
   @if meta.type-of($value) != number {
     @error ('Your look-and-feel value "#{$name}" setted to "#{$value}" need to be a number in "em" or unitless');
@@ -34,16 +37,4 @@
 
   // return the value
   @return $value;
-
-  // // if the value is a unitless one
-  // // return the interpolated value only
-  // @if $value and unitless($value) {
-  // 	@return s-interpolate('settings.look-and-feel.#{$name}', $size);
-  // } @else if $value {
-  // 	// if we have a number value, return the interpolated version
-  // 	@return s-render-round(s-interpolate('settings.look-and-feel.#{$name}', $size));
-  // }
-  //
-  // // we don't have anything...
-  // @return null;
 }
