--- a/utils/sugar1/src/scss/core/functions/_odd.scss
+++ b/utils/sugar1/src/scss/core/functions/_odd.scss
@@ -1,4 +1,6 @@
 @use "sass:math";
+@use 'strip-units' as *;
+
 /**
  * Convert the passed value to the closest odd value
  *
@@ -7,10 +9,10 @@
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-odd($value) {
-  $dec: s-strip-units($value % 2);
+@function odd($value) {
+  $dec: strip-units($value % 2);
   $value: math.round($value);
-  @if s-strip-units($value) % 2 == 0 {
+  @if strip-units($value) % 2 == 0 {
     @if $dec >= 1 {
       $value: $value + 1;
     } @else {
