--- a/utils/sugar1/src/scss/core/functions/_rem.scss
+++ b/utils/sugar1/src/scss/core/functions/_rem.scss
@@ -1,3 +1,4 @@
+@use 'convert' as *;
 /**
  * Convert the passed value to rem
  *
@@ -6,6 +7,6 @@
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function s-rem($value) {
-  @return s-convert($value, rem);
+@function rem($value) {
+  @return convert($value, rem);
 }
