--- a/utils/sugar1/src/scss/core/functions/_setting.scss
+++ b/utils/sugar1/src/scss/core/functions/_setting.scss
@@ -1,6 +1,11 @@
 @use "sass:map";
 @use "sass:math";
 @use "sass:meta";
+@use '../variables' as sugar;
+@use 'convert' as *;
+@use '../../map/map-get-path' as *;
+@use '../../map/map-set' as *;
+
 /**
  * Get a settings from the global settings stack
  *
@@ -16,7 +21,7 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 $_sugar-settings-cache: ();
-@function s-setting($path, $context: $_sugar-current-context, $default: null) {
+@function setting($path, $context: sugar.$current-context, $default: null) {
   $base_path: $path;
   @if $context == default {
     $context: null;
@@ -33,16 +38,16 @@ $_sugar-settings-cache: ();
     @return $cache;
   }
 
-  $value: map-get-path($_sugar-settings, $path);
+  $value: map-get-path(sugar.$settings, $path);
 
   @if not $value and $context {
     // try to get the value from the base component
-    $value: s-setting($base_path, default, $default);
+    $value: setting($base_path, default, $default);
   }
 
   @if meta.type-of($value) == number and not math.is-unitless($value) {
     @if math.unit($value) == px or math.unit($value) == pt or math.unit($value) == rem {
-      $value: s-convert($value);
+      $value: convert($value);
     }
   }
 
